--- a/ScreenToGif/Windows/Recorder.xaml
+++ b/ScreenToGif/Windows/Recorder.xaml
@@ -291,7 +291,7 @@
                         </MultiBinding>
                     </Grid.IsEnabled>
 
-                    <n:IntegerBox Grid.Column="0" x:Name="WidthIntegerBox" Value="{Binding ElementName=RecorderLightWindow, Path=Width, Mode=TwoWay}"
+                    <n:IntegerBox Grid.Column="0" x:Name="WidthIntegerBox" Value="{Binding ElementName=RecorderLightWindow, Path=Width, Mode=TwoWay, TargetNullValue=0}"
                                   Offset="{x:Static u:Constants.HorizontalOffset}" Minimum="100" Maximum="3000" Height="Auto" Padding="4,0" Margin="1,3"
                                   ToolTip="{DynamicResource S.Recorder.Width}" ToolTipService.Placement="Bottom" ToolTipService.HorizontalOffset="-5"
                                   PropagateWheelEvent="True" MouseWheel="SizeIntegerBox_MouseWheel"/>
@@ -299,7 +299,7 @@
                     <Label Grid.Column="1" Content="×" FontSize="16" FontFamily="Segoe Script" Margin="1" VerticalContentAlignment="Center" Padding="0" 
                            Foreground="{Binding ElementName=RecorderLightWindow, Path=Foreground}"/>
 
-                    <n:IntegerBox Grid.Column="2" x:Name="HeightIntegerBox" Value="{Binding ElementName=RecorderLightWindow, Path=Height, Mode=TwoWay}"
+                    <n:IntegerBox Grid.Column="2" x:Name="HeightIntegerBox" Value="{Binding ElementName=RecorderLightWindow, Path=Height, Mode=TwoWay, TargetNullValue=0}"
                                   Offset="{x:Static u:Constants.VerticalOffset}" Minimum="100" Maximum="3000" Height="Auto" Padding="4,0" Margin="1,3"
                                   ToolTip="{DynamicResource S.Recorder.Height}" ToolTipService.Placement="Bottom" ToolTipService.HorizontalOffset="-5"
                                   PropagateWheelEvent="True" MouseWheel="SizeIntegerBox_MouseWheel"/>
